Revamp support page layout and content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,175 @@
-Marginalia - Support
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Marginalia – Support</title>
 
-If you have questions, feedback, or need help, please email me at:
+<style>
+    body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        margin: 0;
+        background-color: #f8f9fb;
+        color: #222;
+        line-height: 1.6;
+    }
 
-jcb1973+support@gmail.com
+    header {
+        background: white;
+        padding: 60px 20px 40px 20px;
+        text-align: center;
+        border-bottom: 1px solid #e5e7eb;
+    }
+
+    h1 {
+        margin: 0;
+        font-size: 2.5rem;
+        font-weight: 700;
+    }
+
+    .subtitle {
+        margin-top: 10px;
+        font-size: 1.1rem;
+        color: #555;
+    }
+
+    main {
+        max-width: 760px;
+        margin: 40px auto;
+        padding: 0 20px 60px 20px;
+    }
+
+    section {
+        margin-bottom: 50px;
+    }
+
+    h2 {
+        font-size: 1.4rem;
+        margin-bottom: 15px;
+        border-bottom: 1px solid #e5e7eb;
+        padding-bottom: 6px;
+    }
+
+    p {
+        margin: 10px 0;
+    }
+
+    ul {
+        padding-left: 20px;
+    }
+
+    .card {
+        background: white;
+        padding: 25px;
+        border-radius: 10px;
+        border: 1px solid #e5e7eb;
+    }
+
+    footer {
+        text-align: center;
+        padding: 40px 20px;
+        color: #666;
+        font-size: 0.9rem;
+        border-top: 1px solid #e5e7eb;
+    }
+
+    a {
+        color: #1d4ed8;
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+</style>
+</head>
+
+<body>
+
+<header>
+    <h1>Marginalia</h1>
+    <div class="subtitle">
+        Support and help for the Marginalia reading notebook app
+    </div>
+</header>
+
+<main>
+
+<section>
+    <div class="card">
+        <h2>About Marginalia</h2>
+        <p>
+            Marginalia is a private reading notebook designed for readers who want a structured way to track books,
+            organise tags, and capture notes and quotes.
+        </p>
+        <p>
+            The app does not use accounts, does not include social features, and does not require a subscription.
+            Your data remains on your device unless you choose to export it.
+        </p>
+    </div>
+</section>
+
+<section>
+    <div class="card">
+        <h2>Frequently Asked Questions</h2>
+
+        <p><strong>How do I add a book?</strong></p>
+        <p>
+            Tap the plus button to add a new book. You can scan the ISBN barcode or enter details manually.
+        </p>
+
+        <p><strong>How does quote capture work?</strong></p>
+        <p>
+            Use the camera inside a book to capture text. Marginalia uses on-device OCR to extract the quote.
+            You can then edit or comment on it.
+        </p>
+
+        <p><strong>How do tag filters work?</strong></p>
+        <p>
+            In the Library view, select one or more tags. You can switch between matching any selected tags
+            or requiring all selected tags.
+        </p>
+
+        <p><strong>Can I export my data?</strong></p>
+        <p>
+            Yes. You can export your library, notes, and quotes to CSV at any time.
+        </p>
+    </div>
+</section>
+
+<section>
+    <div class="card">
+        <h2>Data & Privacy</h2>
+        <p>
+            Marginalia does not require an account and does not collect personal data.
+        </p>
+        <p>
+            All reading data is stored locally on your device.
+            You may export your data at any time.
+        </p>
+    </div>
+</section>
+
+<section>
+    <div class="card">
+        <h2>Contact</h2>
+        <p>
+            For support requests or bug reports, please email:
+        </p>
+        <p>
+            <a href="mailto:jcb1973+support@gmail.com">jcb1973+support@gmail.com</a>
+        </p>
+        <p>
+            Please include your device model and iOS version if reporting a technical issue.
+        </p>
+    </div>
+</section>
+
+</main>
+
+<footer>
+    © 2026 John Cieslik-Bridgen
+</footer>
+
+</body>
+</html>
